# velvet-installer

./: CMakeLists.txt  LICENSE  build  includes-list.txt  main.ui  readme.md  test.ui  to-do
src/: fork.cpp  main.cpp
